Update dune project

--- a/theories/dune
+++ b/theories/dune
@@ -1,5 +1,5 @@
 (coq.theory
- (name mecha)
+ (name Mecha)
  (synopsis "Formalization of Wormholes, an arrow-based FRP language, using De Bruijn levels to represent resources.")
  (theories MMaps DeBrLevel)
 )
