--- a/.github/workflows/dunewk.yml
+++ b/.github/workflows/dunewk.yml
@@ -29,6 +29,7 @@ jobs:
         uses: nmittu/setup-dune@v2
         with:
           compiler: "4.14.1"
+          package: coq@8.20.1
           
       - name: Add MMaps
         run: |
