--- a/.github/workflows/dunewk.yml
+++ b/.github/workflows/dunewk.yml
@@ -17,7 +17,8 @@ jobs:
       matrix:
         coq_version:
           - '8.20.1'
-        ocaml_version: ['default']
+        ocaml_version: 
+          - '4.14.1'
 
     permissions: write-all
 
@@ -25,6 +26,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
           
+      - uses: coq-community/docker-coq-action@v1
+        with:
+          opam_file: 'folder/coq-proj.opam'
+          coq_version: ${{ matrix.coq_version }}
+          ocaml_version: ${{ matrix.ocaml_version }}
+      
       - name: Add MMaps
         run: |
           opam repo add coq-released https://coq.inria.fr/opam/released
